# money-flow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trufflehogignore  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  PROJECT_DOCUMENTATION.md  README.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  subscriptions_20251201.json
.claude/: CHANGELOG.md  README.md
.claude/docs/: ARCHITECTURE.md  MASTER_PLAN.md  MCP_SETUP.md  PRE_COMMIT_HOOKS.md  PYTHON_STANDARDS.md  RAG_CONSIDERATIONS.md  TYPESCRIPT_STANDARDS.md
.claude/plans/: CATEGORY_REFACTOR_PLAN.md  MONEY_FLOW_REFACTOR_PLAN.md  PAYMENT_TRACKING_PLAN.md  PDF_REPORT_ENHANCEMENT_PLAN.md  RAG_PLAN.md  SUBSCRIPTION_TEMPLATES_PLAN.md
.claude/scripts/: README.md  check_code_quality.sh  db_reset.sh  run_tests.sh  setup_dev.sh
.claude/skills/: README.md
.claude/templates/: README.md  fastapi_router.py  python_service.py  react_component.tsx  react_hook.ts
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  notify-start.yml  secret-scanning.yml
deploy/alerting/: alertmanager.yml  prometheus_rules.yml  sentry_telegram_webhook.py
deploy/gcp/: README.md  cloudbuild.yaml
docs/: DEPLOYMENT_RUNBOOK.md  DISASTER_RECOVERY.md  FAQ.md  INCIDENT_RESPONSE.md  PERFORMANCE_BASELINE.md  SECURITY.md  SETTINGS_ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md  openapi.json
docs/api/: AUTHENTICATION.md  CHANGELOG.md  MIGRATION_V0_TO_V1.md  NOTIFICATIONS.md  QUICKSTART.md  RATE_LIMITING.md  README.md
docs/postman/: MoneyFlow.postman_collection.json
frontend/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  Dockerfile.e2e  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
frontend/e2e/: agent.spec.ts  auth.setup.ts  auth.spec.ts  subscriptions.spec.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: backup_database.sh  check_openapi_diff.py  generate_openapi.py  generate_project_summary_pdf.py  migrate_payment_types.py  restore_database.sh  run_load_tests.sh  seed_data.py
src/: __init__.py  main.py
src/agent/: __init__.py  conversational_agent.py  executor.py  parser.py  prompt_loader.py
src/api/: agent.py  ai_settings.py  analytics.py  auth.py  banking.py  banks.py  calendar.py  cards.py  categories.py  currencies.py  export_history.py  health.py  icons.py  insights.py  integrations.py  notifications.py  search.py  statement_import.py  subscriptions.py  telegram.py  users.py  webhooks.py
src/auth/: __init__.py  dependencies.py  jwt.py  security.py
src/core/: config.py  container.py  dependencies.py  exceptions.py  logging.py  metrics.py  resilience.py  response_cache.py  sentry.py  tasks.py
src/db/: __init__.py  database.py
src/middleware/: __init__.py  deprecation.py  exception_handler.py  logging_middleware.py
src/models/: __init__.py  ai_preferences.py  bank_connection.py  bank_profile.py  category.py  export_history.py  google_calendar.py  icon_cache.py  integration.py  notification.py  notification_history.py  payment_card.py  rag.py  statement_import.py  subscription.py  user.py  webhook.py
src/schemas/: __init__.py  ai_preferences.py  bank.py  bank_connection.py  category.py  export.py  icon.py  integration.py  notification.py  payment_card.py  report.py  response.py  statement.py  subscription.py  user.py  webhook.py
src/security/: __init__.py  headers.py  input_sanitizer.py  rate_limit.py  secrets_validator.py  validators.py
src/services/: __init__.py  backup_service.py  bank_service.py  cache_service.py  category_service.py  conversation_service.py  currency_service.py  duplicate_detector.py  email_service.py  (+22 more)
tests/: conftest.py
(+144 files in other folders)
