[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-tracker"
version = "0.1.0"
description = "Subscription and recurring payment tracker with agentic interface"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "anthropic>=0.18.0",
    "python-dateutil>=2.8.2",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # Authentication dependencies
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",  # Pin bcrypt for passlib compatibility
    "pyjwt>=2.8.0",
    # Security dependencies
    "slowapi>=0.1.9",  # Rate limiting
    # Caching
    "redis>=5.0.0",
    # Observability
    "structlog>=24.1.0",  # Structured logging
    "sentry-sdk[fastapi]>=1.40.0",  # Error tracking
    "prometheus-fastapi-instrumentator>=6.1.0",  # Prometheus metrics
]

[project.optional-dependencies]
rag = [
    # RAG dependencies (optional - only needed when RAG_ENABLED=true)
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    # Contract testing (Sprint 2.3)
    "schemathesis>=3.25.0",
    "openapi-spec-validator>=0.7.0",
    # Load testing (Sprint 2.4)
    "locust>=2.20.0",
]

[project.scripts]
subscription-tracker = "src.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "claude_api: mark test as requiring real Claude API access",
]
